--- a/index.html
+++ b/index.html
@@ -3,9 +3,21 @@
 <head>
     <meta charset="UTF-8">
     <title>Effective JavaScript: Frogger</title>
+    <link href="https://fonts.googleapis.com/css?family=Lobster|Open+Sans|Press+Start+2P" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+    <div class ="starter">
+        <p class="instruction">choose the player and click Start Game</p>
+        <div class="character">
+            <div class="player"><img src="images/char-boy.png"></div>
+            <div class="player"><img src="images/char-cat-girl.png"></div>
+            <div class="player"><img src="images/char-horn-girl.png"></div>
+            <div class="player"><img src="images/char-pink-girl.png"></div>
+            <div class="player"><img src="images/char-princess-girl.png"></div>
+        </div>
+        <button class="start-button">Start Game</button>
+    </div>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
