creating statics panel

--- a/index.html
+++ b/index.html
@@ -20,7 +20,22 @@
 
         <button class="start-button">Start Game</button>
     </div>
+    
+    <div class="statics">
+        <div class="static-cont">
+            <div "score-panel"><span class='points'>0</span> points</div>
+            <div class ="lives-panel">x<span class="lives">5</span></div>
+        </div>
+    </div> 
 
+    <div class="modal">
+       <div class='modal-details'>
+           <span class="final-msg">Game Over</span>
+           <span class="final-score"></span>
+       </div>
+    </div>
+
+    <div class="game-over"></div>
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
