removing the princess character

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             <div class="player"><img src="images/char-cat-girl.png"></div>
             <div class="player"><img src="images/char-horn-girl.png"></div>
             <div class="player"><img src="images/char-pink-girl.png"></div>
-            <div class="player"><img src="images/char-princess-girl.png"></div>
+            <!--<div class="player"><img src="images/char-princess-girl.png"></div>-->
         </div>
 
         <button class="start-button">Start Game</button>
